overflow issue fixed

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ body {
     font-family: "CustomBold", sans-serif;
     color: var(--text-color);
     height: 220vh;
+    overflow-x: hidden;
 }
 
 header {
